<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>Java-Playwright</groupId>
  <artifactId>Java-Playwright</artifactId>
  <version>0.0.1</version>
  <name>Java-Playwright</name>
  <description>Java-Playwright</description>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
      <java.version>11</java.version>
      <maven.compiler.source>${java.version}</maven.compiler.source>
      <maven.compiler.target>${java.version}</maven.compiler.target>
      <!-- <junit-platform.version>5.3.1</junit-platform.version> -->
      <junit-platform.version>5.5.2</junit-platform.version>
     <!--  <junit-platform.version>5.6.1</junit-platform.version> -->
  </properties>
  
  <dependencies>
		
	<!-- https://mvnrepository.com/artifact/com.microsoft.playwright/playwright -->
	<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
	<dependency>
	    <groupId>org.apache.poi</groupId>
	    <artifactId>poi-ooxml</artifactId>
	    <version>5.0.0</version>
	</dependency>
	
	<!-- https://mvnrepository.com/artifact/org.json/json -->
	<dependency>
	    <groupId>org.json</groupId>
	    <artifactId>json</artifactId>
	    <version>20210307</version>
	</dependency>
	  
	<!-- https://mvnrepository.com/artifact/com.microsoft.playwright/driver-bundle -->
	<!-- <dependency>
	    <groupId>com.microsoft.playwright</groupId>
	    <artifactId>driver-bundle</artifactId>
	    <version>0.180.0</version>
	</dependency >-->
	<!-- https://mvnrepository.com/artifact/com.microsoft.playwright/playwright -->
<dependency>
    <groupId>com.microsoft.playwright</groupId>
    <artifactId>playwright</artifactId>
    <version>1.12.0</version>
</dependency>
	
	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-params -->
	<dependency>
	    <groupId>org.junit.jupiter</groupId>
	    <artifactId>junit-jupiter-params</artifactId>
	    <version>5.6.2</version>
	   <!--  <scope>test</scope> -->
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.junit.platform/junit-platform-engine -->
<dependency>
    <groupId>org.junit.platform</groupId>
    <artifactId>junit-platform-engine</artifactId>
    <version>1.7.2</version>
    <!-- <scope>test</scope> -->
</dependency>
	
	
	<dependency>
		<groupId>org.junit.jupiter</groupId>
		<artifactId>junit-jupiter-api</artifactId>
		<version>${junit-platform.version}</version>
		<!--   <scope>test</scope>-->
    </dependency>

	 <dependency>
		<groupId>org.junit.jupiter</groupId>
		<artifactId>junit-jupiter-engine</artifactId>
		<version>${junit-platform.version}</version>
	     <!-- <scope>test</scope> -->
	</dependency>

	<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
	<dependency>
		<groupId>com.aventstack</groupId>	
		<artifactId>extentreports</artifactId>
		<version>5.0.6</version>
	</dependency>
	
	<!-- https://mvnrepository.com/artifact/org.freemarker/freemarker -->
	<dependency>
		<groupId>org.freemarker</groupId>
		<artifactId>freemarker</artifactId>
		<version>2.3.30</version>
	</dependency>
	
	<!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
	<dependency>
	    <groupId>com.squareup.okhttp3</groupId>
	    <artifactId>okhttp</artifactId>
	    <version>3.9.1</version>
	</dependency>
	<dependency>
    	<groupId>log4j</groupId>
   	 <artifactId>log4j</artifactId>
   	 <version>1.2.17</version>
   </dependency>
	<!-- https://mvnrepository.com/artifact/org.junit.platform/junit-platform-launcher -->
		<dependency>
		    <groupId>org.junit.platform</groupId>
		    <artifactId>junit-platform-launcher</artifactId>
		    <version>1.7.2</version>
		    <!-- <scope>test</scope> -->
		</dependency>
	<!-- https://mvnrepository.com/artifact/org.junit.platform/junit-platform-commons -->
<dependency>
    <groupId>org.junit.platform</groupId>
    <artifactId>junit-platform-commons</artifactId>
    <version>1.7.2</version>
</dependency>

<!-- https://mvnrepository.com/artifact/org.junit.vintage/junit-vintage-engine -->
<!-- <dependency>
    <groupId>org.junit.vintage</groupId>
    <artifactId>junit-vintage-engine</artifactId>
    <version>5.7.2</version>
    <scope>test</scope>
</dependency> -->
<!-- <dependency>
    <groupId>org.junit.jupiter</groupId>
    <artifactId>junit-jupiter-engine</artifactId>
    <version>5.5.2</version>
</dependency> -->


  </dependencies>
  
 <build>
  <finalName>Java-Playwright</finalName>
  
			<plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.0</version>
               
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            
            
	</plugins>
	</build>
 
</project>
